# ansible-collection-workstation

./: .galaxy.yml.swp  .gitignore  README.md  ansible.cfg  galaxy.yml  requirements.yml
collections/ansible_collections/lordoftheflies/ansible_collection_freeipa/: .gitignore  FILES.json  MANIFEST.json  setup.cfg
collections/ansible_collections/lordoftheflies/ansible_collection_freeipa/roles/ipaserver/tasks/: copy_external_cert.yml
roles/lordoftheflies.ansible_role_java/meta/: .galaxy_install_info
roles/lordoftheflies.ansible_role_nodejs/meta/: .galaxy_install_info
roles/lordoftheflies.ansible_role_python/meta/: .galaxy_install_info
roles/lordoftheflies.ansible_role_vagrant/meta/: .galaxy_install_info
