[metadata]
name = ansible-collection-freeipa
summary = Ansible collection of roles for FreeIPA
description-file =
    README.md
home-page = https://github.com/lordoftheflies/ansible-collection-freeipa
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
[pbr]
warnerrors = True

[wheel]
universal = 1

[files]
data_files =
    /usr/share/ansible/roles/ipaclient = roles/ipaclient/*
    /usr/share/ansible/roles/ipaserver = roles/ipaserver/*
    /usr/share/ansible/roles/ipareplica = roles/ipareplica/*
